중복없이 posts랑 restaurants에 적재
서비스로 만듦. 컨트롤러에선 api호출하는 서비스 불러서 처리하고 조건에 따라 DB에 적재여부 결정함